--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 <span><i class="fas fa-map-marker-alt"></i></span>
               </div>
               <h5>Location</h5>
-              <p>B261 aqua Park, New Delhi,122222</p>
+              <p>New Street-45, Pune</p>
             </div>
 
             <div class="contact-item">
